Working on abbreviations

--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -13,9 +13,9 @@ The emerging fields of Data Mining and Data Analysis have deeply benefited from 
 \section*{Secure Multiparty Computation}
 
 
-To overcome the privacy-related issues described above, several privacy-enhancing technologies have been proposed \cite{Li2016, Armknecht2015, Yao82}. One important area of research is Secure Multiparty Computation (SMC). This technology allows a set of $n$ parties $P_i$ to jointly compute some function $f( x_1, ..., x_n ) = (y_1, ..., y_n)$ without disclosing their inputs to the other parties. The security requirements of SMC are equivalent to an ideal case, where every party $P_i$ sends his inputs to some independent and trusted third party, who computes $f()$ and sends back to each party their corresponding output.
+To overcome the privacy-related issues described above, several privacy-enhancing technologies have been proposed \cite{Li2016, Armknecht2015, Yao82}. One important area of research is secure multiparty computation (SMC). This technology allows a set of $n$ parties $P_i$ to jointly compute some function $f( x_1, ..., x_n ) = (y_1, ..., y_n)$ without disclosing their inputs to the other parties. The security requirements of SMC are equivalent to an ideal case, where every party $P_i$ sends his inputs to some independent and trusted third party, who computes $f()$ and sends back to each party their corresponding output.
 
-Since Yao seminal work \cite{Y86}, several SMC protocols have been developed, rendering different framework implementations \cite{Goldreich87, Bendlin11, D12}. However, they can generally be separated into two types according to the circuit logic being used: boolean or arithmetic. In each case, the efficiency and security of SMC heavily rely on the efficiency and security of important cryptographic primitives. Boolean-based SMC protocols rely on Oblivious Transfer (OT) \cite{K88} and arithmetic-based rely on Oblivious Linear Evaluation (OLE) \cite{DPSZ12}. Impagliazzo and Rudich \cite{IR99} proved that both OT and OLE protocols require public cryptography and cannot just rely on symmetric cryptography. This is an unfortunate result both from an efficiency and security perspective. Indeed, symmetric cryptography is lighter than asymmetric cryptography and requires less computational assumptions. Moreover, with the emergence of quantum computers, Shor’s algorithm \cite{Sho95} jeopardizes all the current public-key methods based on RSA, Elliptic Curves or Diffie-Hellman, in which many OT and OLE implementations rely on. This puts at risk the deployment of classical OT and OLE, which ultimately leads to the exposure of the SMC parties’ private inputs. Thus, it is essential to develop SMC methods secure against quantum computers while not compromising state-of-the-art performance levels.
+Since Yao seminal work \cite{Y86}, several SMC protocols have been developed, rendering different framework implementations \cite{Goldreich87, Bendlin11, D12}. However, they can generally be separated into two types according to the circuit logic being used: boolean or arithmetic. In each case, the efficiency and security of SMC heavily rely on the efficiency and security of important cryptographic primitives. Boolean-based SMC protocols rely on oblivious transfer (OT) \cite{K88} and arithmetic-based rely on oblivious linear evaluation (OLE) \cite{DPSZ12}. Impagliazzo and Rudich \cite{IR99} proved that both OT and OLE protocols require public cryptography and cannot just rely on symmetric cryptography. This is an unfortunate result both from an efficiency and security perspective. Indeed, symmetric cryptography is lighter than asymmetric cryptography and requires less computational assumptions. Moreover, with the emergence of quantum computers, Shor’s algorithm \cite{Sho95} jeopardizes all the current public-key methods based on RSA, Elliptic Curves or Diffie-Hellman, in which many OT and OLE implementations rely on. This puts at risk the deployment of classical OT and OLE, which ultimately leads to the exposure of the SMC parties’ private inputs. Thus, it is essential to develop SMC methods secure against quantum computers while not compromising state-of-the-art performance levels.
 
 
 \section*{A Quantum Era}
@@ -24,7 +24,7 @@ We are now in the beginning of what is known to be
 the second quantum revolution. Quantum technology has evolved to a point where we can integrate quantum exotic features into complex engineering systems. Most of the applications lie in the field of quantum cryptography, where one thrives to find protocols that offer some advantage over their classical counterparts. As analysed in \cite{B15, PSAN13}, these advantages can be of two types:
 
 \begin{enumerate}
-    \item Improve the security requirements, rendering protocols that are information-theoretically secure or require fewer computational assumptions;
+    \item Improve the security requirements, rendering protocols that are information theoretically secure or require fewer computational assumptions;
     \item Achieve new primitives that were previously not possible just with classical techniques.
 \end{enumerate}
 Despite the most famous use-case of quantum cryptography being quantum key distribution (QKD), other primitives play an important role in this quest. Some examples of these cryptographic tasks are bit commitment \cite{CK11}, coin flipping \cite{CK09}, delegated quantum computation \cite{BFK09}, position verification \cite{Unr14}, and password-based identification \cite{DFSS14, DFLSS09}. 
@@ -44,11 +44,9 @@ We describe the contributions in a bit more detail.
 
 \noindent\textbf{Efficiency of classical and quantum OT protocols.} To the best of our knowledge, there is no comparative study on the efficiency of quantum and classical approaches. This is mainly caused by two reasons. From a theoretical perspective, the use of different types of information (quantum and classical) makes it difficult to make a fair comparison based on the protocols' complexity. Also, from a practical standpoint, there is still a discrepancy in the technological maturity between quantum and classical techniques. Quantum technology is still in its infancy,  whereas classical processors and communication have many decades of development. 
 
-Despite these constraints, we compare the complexity and operations efficiency of classical and quantum protocols. To achieve this, we realize that both classical and quantum protocols can be divided into two phases: offline and online. The offline phase is characterize by the fact that it is independent of the parties' inputs. This means that, from a practical point-of-view, this phase produces the resources necessary to use during the online phase, where we take into consideration the parties' inputs. It can be argued that the offline phase is not so hungry-efficient as the online phase. As a consequence, for comparison purposes, we can focus on the online phase. Fortunately, the online phase of quantum OT is solely based on classical communications. Therefore, it is possible and fair to compare the online phase of both classical and quantum protocols. 
+Despite these constraints, we compare the complexity and operations efficiency of classical and quantum protocols. To achieve this, we realize that both classical and quantum protocols can be divided into two phases: precomputation and transfer phase. The precomputation phase is characterize by the fact that it is independent of the parties' inputs. This means that, from a practical point-of-view, this phase produces the resources necessary to use during the transfer phase, where we take into consideration the parties' inputs. It can be argued that the precomputation phase is not so hungry-efficient as the transfer phase. As a consequence, for comparison purposes, we can focus on the transfer phase. Fortunately, the transfer phase of quantum OT is solely based on classical communications. Therefore, it is possible and fair to compare the transfer phase of both classical and quantum protocols. 
 
-We make a detailed comparison between the complexity of the online phase of two state-of-the-art classical OT protocols \cite{ALSZ13, KOS15} and an optimized quantum OT protocol. We conclude that the online phase of quantum OT competes with its classical counterparts and has the potential to be more efficient.
-
-{\cv Convetion issue: use precomputation phase instead of offline; use transfer phase instead of online.}
+We make a detailed comparison between the complexity of the transfer phase of two state-of-the-art classical OT protocols \cite{ALSZ13, KOS15} and an optimised quantum OT protocol. We conclude that the transfer phase of quantum OT competes with its classical counterparts and has the potential to be more efficient.
 
 \
 
@@ -66,7 +64,7 @@ We consider the static corruption adversarial model with both semi-honest and ma
 
 \
 
-The results are presented as follows. We start presenting SMC protocols based on OT and OLE at Chapter 2. Then, at Chapter 3 we introduce some quantum information concepts and security definitions used throughout the thesis. Chapter 4 is devoted to quantum oblivious transfer protocols. Then, in Chapter 5 we compare classical and quantum approaches for OT. In Chapter 6 we present out quantum OLE protocol along with its security proof. Finally, in Chapter 7, we presented our implementation of quantum-assisted SMC system applied to phylogeny analysis. {\cv rewrite the chapters}
+The results are presented as follows. We start presenting the technical elements required throughout the thesis. Chapter~\ref{chapter_QOT} is devoted to quantum oblivious transfer protocols. Then, in Chapter~\ref{classical-and-quantum-OT} we compare classical and quantum approaches for OT. In Chapter~\ref{ch:phylogenetic-trees}, we presented our implementation of quantum-assisted SMC system applied to phylogeny analysis. In Chapter~\ref{ch:QOLE}, we present our quantum OLE protocol along with its security proof. Finally, in Chapter~\ref{ch:conclusion} we present an overall conclusion of the thesis and propose some future work.
 
 
 \
@@ -95,8 +93,7 @@ in Genome and Proteins”. In: 2020 22nd International Conference on Transparent
 Networks (ICTON). IEEE, July 2020. 
 \end{itemize}
 
-
-Chapter 4 is based on \cite{SMP22}. Chapter 5 is based on the work developed on both \cite{SPM21} and \cite{SGPM22}. Chapter 6 presents all the results from \cite{SMV22}. Finally, Chapter 7 is the combination of \cite{SGPM22, SGPM21, POS+20}
+Chapter~\ref{chapter_QOT} is based on \cite{SMP22} and \cite{SGPM22}. Chapter~\ref{classical-and-quantum-OT} is based on the work developed on both \cite{SPM21} and \cite{SGPM22}. Chapter~\ref{ch:phylogenetic-trees} is the combination of \cite{SGPM22, SGPM21, POS+20}. Finally, Chapter~\ref{ch:QOLE} presents all the results from \cite{SMV22}. 
 
 %\bibliography{bibforthesis}
 %\bibliographystyle{unsrt}
