--- a/List_of_Abbreviations.tex
+++ b/List_of_Abbreviations.tex
@@ -1,5 +1,138 @@
 \chapter*{List of Abbreviations}
 
+
+\textbf{AES} -- Advanced Encryption Standard
+\vspace{0.5cm}\\
+\textbf{ALSZ13} -- OT extension protocol developed by Gilad Asharov, Yehuda Lindell, Thomas Schneider, and Michael Zohner \cite{ALSZ13}.
+\vspace{0.5cm}\\
+\textbf{API} -- Application Programming Interface
+\vspace{0.5cm}\\
+\textbf{BB84} -- Quantum key distribution protocol developed by Charles Bennet and Gilles Brassard in 1984 \cite{BB84}
+\vspace{0.5cm}\\
+\textbf{BBCS} -- Bennet, Brassard, Crépeau, Skubiszewska
+\vspace{0.5cm}\\
+\textbf{BCJL} -- Brassard, Crépeau, Jozsa, Langlois
+\vspace{0.5cm}\\
+\textbf{BGW} -- Ben-Or, Goldwasser, Wigderson
+\vspace{0.5cm}\\
+\textbf{BM} -- Bellare, Micali
+\vspace{0.5cm}\\
+\textbf{BMR} -- Beaver, Micali, Rogaway
+\vspace{0.5cm}\\
+\textbf{BQS} -- Bounded-quantum-storage model
+\vspace{0.5cm}\\
+\textbf{BQS-UC} -- Bounded-quantum-storage model in the universally compasable framework
+\vspace{0.5cm}\\
+\textbf{CBMC-GC} -- C Bounded model checker - Garbled Circuit
+\vspace{0.5cm}\\
+\textbf{CCD} -- David Chaum, Claude Crépeau, Ivan Damg\"{a}rd
+\vspace{0.5cm}\\
+\textbf{COM} -- Commitment
+\vspace{0.5cm}\\
+\textbf{CP} -- Completely positive map
+\vspace{0.5cm}\\
+\textbf{CPTP} -- Completely positive trace preserving map
+\vspace{0.5cm}\\
+\textbf{CPU} -- Central processing unit
+\vspace{0.5cm}\\
+\textbf{CSRNG} -- Cryptographically secure pseudorandom number generator
+\vspace{0.5cm}\\
+\textbf{DI} -- Device independent
+\vspace{0.5cm}\\
+\textbf{EGL} -- Even, Goldreich, Lempel
+\vspace{0.5cm}\\
+\textbf{EGL} -- Even, Goldreich, Lempel
+\vspace{0.5cm}\\
+\textbf{F84} -- Evolutionary distance developed by Felsenstein
+\vspace{0.5cm}\\
+\textbf{FSA} -- Faked-state attacks
+\vspace{0.5cm}\\
+\textbf{GDPR} -- General data protection regulation
+\vspace{0.5cm}\\
+\textbf{GISAID} -- Global initiative on sharing avian influenza data
+\vspace{0.5cm}\\
+\textbf{GMW} -- Goldreich, Micali, Wigderson
+\vspace{0.5cm}\\
+\textbf{GWAS} -- Genome-wide association studies
+\vspace{0.5cm}\\
+\textbf{HyCC} -- Compilation of hybrid protocols developed in \cite{Bscher2018}
+\vspace{0.5cm}\\
+\textbf{JC} -- Jukes-Cantor
+\vspace{0.5cm}\\
+\textbf{K2P} -- Kimura 2-parameter
+\vspace{0.5cm}\\
+\textbf{KOS15} -- OT extension protocol developed by Marcel Keller, Emmanuela Orsini and Peter Scholl \cite{KOS15}.
+\vspace{0.5cm}\\
+\textbf{LAN} -- Local area network
+\vspace{0.5cm}\\
+\textbf{LD} -- LogDet
+\vspace{0.5cm}\\
+\textbf{M-LWE} -- Module learning with errors
+\vspace{0.5cm}\\
+\textbf{MDI} -- Measurement device independent
+\vspace{0.5cm}\\
+\textbf{MMH} -- Multi-linear modular hashing
+\vspace{0.5cm}\\
+\textbf{MUB} -- Mutually unbiased bases
+\vspace{0.5cm}\\
+\textbf{NP} -- Naor, Pinkas
+\vspace{0.5cm}\\
+\textbf{NQS} -- Noisy quantum storage model
+\vspace{0.5cm}\\
+\textbf{NTRU} -- Number theory research unit
+\vspace{0.5cm}\\
+\textbf{OKM} -- Oblivious key management system
+\vspace{0.5cm}\\
+\textbf{OLE} -- Oblivious linear evaluation
+\vspace{0.5cm}\\
+\textbf{OT} -- Oblivious transfer
+\vspace{0.5cm}\\
+\textbf{PDQ} -- Private database queries
+\vspace{0.5cm}\\
+\textbf{PET} -- Privacy-enhancing technologies
+\vspace{0.5cm}\\
+\textbf{PHYLIP} -- Phylogeny inference package
+\vspace{0.5cm}\\
+\textbf{POVM} -- Positive operator-valued measure
+\vspace{0.5cm}\\
+\textbf{PRG} -- Pseudorandom generator
+\vspace{0.5cm}\\
+\textbf{QBC} -- Quantum bit commitment
+\vspace{0.5cm}\\
+\textbf{QKD} -- Quantum key distribution
+\vspace{0.5cm}\\
+\textbf{QOKD} -- Quantum oblivious key distribution
+\vspace{0.5cm}\\
+\textbf{QOLE} -- Quantum oblivious linear evaluation
+\vspace{0.5cm}\\
+\textbf{QOT} -- Quantum oblivious transfer
+\vspace{0.5cm}\\
+\textbf{QRNG} -- Quantum oblivious transfer
+\vspace{0.5cm}\\
+QRNG
+quantum-UC
+RAM
+RNG
+ROM
+RSA
+RWOLE
+SARS-CoV-2
+SHA
+SimpleOT
+SMC
+THA
+UC
+UPGMA
+VM
+VOLE
+WOLE
+WSE
+
+
+
+
+
+
 \textbf{A} -- Alice
 \vspace{0.5cm}\\
 \textbf{B} -- Bob
