--- a/References/References.bib
+++ b/References/References.bib
@@ -4562,9 +4562,39 @@ month = {oct}
       doi={10.22331/q-2022-05-30-725}
 }
 
+@article{D21,
+  doi = {10.48550/ARXIV.2109.06709},
+  url = {https://arxiv.org/abs/2109.06709},
+  journal={arxiv},
+  volume = {2109.06709},
+  author = {Ostrev, Dimiter},}
+  
+  keywords = {Quantum Physics (quant-ph), Cryptography and Security (cs.CR), Information Theory (cs.IT), FOS: Physical sciences, FOS: Physical sciences, FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {QKD parameter estimation by two-universal hashing leads to faster convergence to the asymptotic rate},
+  
+  publisher = {arXiv},
+  
+  year = {2021},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
 
 
 
+@article{CW79,
+title = {Universal classes of hash functions},
+journal = {Journal of Computer and System Sciences},
+volume = {18},
+number = {2},
+pages = {143-154},
+year = {1979},
+issn = {0022-0000},
+doi = {https://doi.org/10.1016/0022-0000(79)90044-8},
+url = {https://www.sciencedirect.com/science/article/pii/0022000079900448},
+author = {J. Lawrence Carter and Mark N. Wegman},
+
+}
 
 
 
