--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -2,12 +2,17 @@
 
 \chapter*{Acknowledgments}
 \addcontentsline{toc}{section}{Acknowledgements}
-Write the acknowledgments here.
+
+The research presented in this dissertation was carried out under the supervision of Paulo Mateus and Armando Nolasco Pinto. I would like to thank them for their encouragement and support throughout these years.
+
+I have benefited a lot from the stimulating discussions with my colleagues. In particular, I wish to extend my special thanks to Chrysoula Vlachou. Also, I would like to thank Pedro Branco for the discussions we had around the UC framework and other crypto-related topics. Without those, this journey would have been more arduous.
+
+Also, I want to thank my friends Francisco Gomes, Gonçalo Santos, José Reis and Tomás Lobão. Ver\ae\ amiciti\ae\ sempitern\ae\ sunt. Finally and most importantly, I would like to thank my family for their love and support. This dissertation is dedicated to my wife Teresinha and my kids Henrique and Helena.
 
 \vfill
 \begin{center}\begin{footnotesize}
 I acknowledge Funda\c{c}\~{a}o para a Ci\^{e}ncia e a Tecnologia (FCT, Portugal) for its support through the PhD grant SFRH/BD/ 144806/2019 in the context of the Doctoral Program in the Information Security (IS).\\
-I also acknowledge support from SQIG (Security and Quantum Information Group) in the Instituto de Telecomunica\c{c}\~{o}es (IT), Lisbon, namely through UID/EEA/50008/2013. (CHECK THIS)
+I also acknowledge support from SQIG (Security and Quantum Information Group) in the Instituto de Telecomunica\c{c}\~{o}es (IT), Lisbon, namely through UID/EEA/50008/2013. {\cv(CHECK THIS)}
 \end{footnotesize}
 \end{center}
 
