Working on notation

--- a/Chrysis.tex
+++ b/Chrysis.tex
@@ -82,6 +82,9 @@
 %\end{singlespace}
 
 % Add entry in the table of contents as section
+\phantomsection
+\addcontentsline{toc}{section}{Notation}
+\input{Notation} 
 
 \cleardoublepage
 
