--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -75,10 +75,7 @@ This thesis is based on research published in various journals. During my PhD I 
 
 \begin{itemize}
 	\item\cite{SMP22} Manuel B. Santos, Paulo Mateus, and Armando N. Pinto. “Quantum Oblivious Transfer:
-A Short Review”. In: Entropy 24.7 (July 2022), p. 945.
-
-	\item\cite{SPM21} Manuel B. Santos, Armando N. Pinto, and Paulo Mateus. “Quantum and classical
-oblivious transfer: A comparative analysis”. In: IET Quantum Communication 2.2 (May 2021), pp. 42–53.
+A Short Review”. In: Entropy 24.7 (2022), p. 945.
 
 	\item\cite{SMV22} Manuel B. Santos, Paulo Mateus, and Chrysoula Vlachou. Quantum Universally
 Composable Oblivious Linear Evaluation. 2022. DOI: 10.48550/ARXIV.2204.14171. Poster at QCrypt2022.
@@ -86,9 +83,12 @@ Composable Oblivious Linear Evaluation. 2022. DOI: 10.48550/ARXIV.2204.14171. Po
 	\item\cite{SGPM22} Manuel B. Santos et al. “Private Computation of Phylogenetic Trees Based on Quantum
 Technologies”. In: IEEE Access 10 (2022), pp. 38065–38088.
 
+	\item\cite{SPM21} Manuel B. Santos, Armando N. Pinto, and Paulo Mateus. “Quantum and classical
+oblivious transfer: A comparative analysis”. In: IET Quantum Communication 2.2 (2021), pp. 42–53.
+
 	\item\cite{SGPM21} Manuel B. Santos et al. “Quantum Secure Multiparty Computation of Phylogenetic Trees of SARS-CoV-2 Genome”. In: 2021 Telecoms Conference (ConfTELE). IEEE, Feb. 2021.
 
-\item\cite{POS+20} Armando N. Pinto et al. “Quantum Enabled Private Recognition of Composite Signals
+    \item\cite{POS+20} Armando N. Pinto et al. “Quantum Enabled Private Recognition of Composite Signals
 in Genome and Proteins”. In: 2020 22nd International Conference on Transparent Optical
 Networks (ICTON). IEEE, July 2020. 
 \end{itemize}
