--- a/List_of_Abbreviations.tex
+++ b/List_of_Abbreviations.tex
@@ -1,175 +1,147 @@
 \chapter*{List of Abbreviations}
 
 
-\textbf{AES} -- Advanced Encryption Standard
+\textbf{AES} -- Advanced Encryption Standard.
 \vspace{0.5cm}\\
 \textbf{ALSZ13} -- OT extension protocol developed by Gilad Asharov, Yehuda Lindell, Thomas Schneider, and Michael Zohner \cite{ALSZ13}.
 \vspace{0.5cm}\\
-\textbf{API} -- Application Programming Interface
+\textbf{API} -- Application Programming Interface.
 \vspace{0.5cm}\\
-\textbf{BB84} -- Quantum key distribution protocol developed by Charles Bennet and Gilles Brassard in 1984 \cite{BB84}
+\textbf{BB84} -- Quantum key distribution protocol developed by Charles Bennet and Gilles Brassard in 1984 \cite{BB84}.
 \vspace{0.5cm}\\
-\textbf{BBCS} -- Bennet, Brassard, Crépeau, Skubiszewska
+\textbf{BBCS} -- Bennet, Brassard, Crépeau, Skubiszewska.
 \vspace{0.5cm}\\
-\textbf{BCJL} -- Brassard, Crépeau, Jozsa, Langlois
+\textbf{BCJL} -- Brassard, Crépeau, Jozsa, Langlois.
 \vspace{0.5cm}\\
-\textbf{BGW} -- Ben-Or, Goldwasser, Wigderson
+\textbf{BGW} -- Ben-Or, Goldwasser, Wigderson.
 \vspace{0.5cm}\\
-\textbf{BM} -- Bellare, Micali
+\textbf{BM} -- Bellare, Micali.
 \vspace{0.5cm}\\
-\textbf{BMR} -- Beaver, Micali, Rogaway
+\textbf{BMR} -- Beaver, Micali, Rogaway.
 \vspace{0.5cm}\\
-\textbf{BQS} -- Bounded-quantum-storage model
+\textbf{BQS} -- Bounded-quantum-storage model.
 \vspace{0.5cm}\\
-\textbf{BQS-UC} -- Bounded-quantum-storage model in the universally compasable framework
+\textbf{BQS-UC} -- Bounded-quantum-storage model in the universal compasability framework.
 \vspace{0.5cm}\\
-\textbf{CBMC-GC} -- C Bounded model checker - Garbled Circuit
+\textbf{CBMC-GC} -- C Bounded model checker - Garbled Circuit.
 \vspace{0.5cm}\\
-\textbf{CCD} -- David Chaum, Claude Crépeau, Ivan Damg\"{a}rd
+\textbf{CCD} -- David Chaum, Claude Crépeau, Ivan Damg\'{a}rd.
 \vspace{0.5cm}\\
-\textbf{COM} -- Commitment
+\textbf{COM} -- Commitment.
 \vspace{0.5cm}\\
-\textbf{CP} -- Completely positive map
+\textbf{CP} -- Completely positive map.
 \vspace{0.5cm}\\
-\textbf{CPTP} -- Completely positive trace preserving map
+\textbf{CPTP} -- Completely positive trace preserving map.
 \vspace{0.5cm}\\
-\textbf{CPU} -- Central processing unit
+\textbf{CPU} -- Central processing unit.
 \vspace{0.5cm}\\
-\textbf{CSRNG} -- Cryptographically secure pseudorandom number generator
+\textbf{CSRNG} -- Cryptographically secure pseudorandom number generator.
 \vspace{0.5cm}\\
-\textbf{DI} -- Device independent
+\textbf{DI} -- Device independent.
 \vspace{0.5cm}\\
-\textbf{EGL} -- Even, Goldreich, Lempel
+\textbf{EGL} -- Even, Goldreich, Lempel.
 \vspace{0.5cm}\\
-\textbf{EGL} -- Even, Goldreich, Lempel
+\textbf{EGL} -- Even, Goldreich, Lempel.
 \vspace{0.5cm}\\
-\textbf{F84} -- Evolutionary distance developed by Felsenstein
+\textbf{F84} -- Evolutionary distance developed by Felsenstein.
 \vspace{0.5cm}\\
-\textbf{FSA} -- Faked-state attacks
+\textbf{FSA} -- Faked-state attacks.
 \vspace{0.5cm}\\
-\textbf{GDPR} -- General data protection regulation
+\textbf{GDPR} -- General data protection regulation.
 \vspace{0.5cm}\\
-\textbf{GISAID} -- Global initiative on sharing avian influenza data
+\textbf{GISAID} -- Global initiative on sharing avian influenza data.
 \vspace{0.5cm}\\
-\textbf{GMW} -- Goldreich, Micali, Wigderson
+\textbf{GMW} -- Goldreich, Micali, Wigderson.
 \vspace{0.5cm}\\
-\textbf{GWAS} -- Genome-wide association studies
+\textbf{GWAS} -- Genome-wide association studies.
 \vspace{0.5cm}\\
-\textbf{HyCC} -- Compilation of hybrid protocols developed in \cite{Bscher2018}
+\textbf{HyCC} -- Compilation of hybrid protocols developed in \cite{Bscher2018}.
 \vspace{0.5cm}\\
-\textbf{JC} -- Jukes-Cantor
+\textbf{JC} -- Jukes-Cantor.
 \vspace{0.5cm}\\
-\textbf{K2P} -- Kimura 2-parameter
+\textbf{K2P} -- Kimura 2-parameter.
 \vspace{0.5cm}\\
 \textbf{KOS15} -- OT extension protocol developed by Marcel Keller, Emmanuela Orsini and Peter Scholl \cite{KOS15}.
 \vspace{0.5cm}\\
-\textbf{LAN} -- Local area network
+\textbf{LAN} -- Local area network.
 \vspace{0.5cm}\\
-\textbf{LD} -- LogDet
+\textbf{LD} -- LogDet.
 \vspace{0.5cm}\\
-\textbf{M-LWE} -- Module learning with errors
+\textbf{M-LWE} -- Module learning with errors.
 \vspace{0.5cm}\\
-\textbf{MDI} -- Measurement device independent
+\textbf{MDI} -- Measurement device independent.
 \vspace{0.5cm}\\
-\textbf{MMH} -- Multi-linear modular hashing
+\textbf{MMH} -- Multi-linear modular hashing.
 \vspace{0.5cm}\\
-\textbf{MUB} -- Mutually unbiased bases
+\textbf{MUB} -- Mutually unbiased bases.
 \vspace{0.5cm}\\
-\textbf{NP} -- Naor, Pinkas
+\textbf{NP} -- Naor, Pinkas.
 \vspace{0.5cm}\\
-\textbf{NQS} -- Noisy quantum storage model
+\textbf{NQS} -- Noisy quantum storage model.
 \vspace{0.5cm}\\
-\textbf{NTRU} -- Number theory research unit
+\textbf{NTRU} -- Number theory research unit.
 \vspace{0.5cm}\\
-\textbf{OKM} -- Oblivious key management system
+\textbf{OKM} -- Oblivious key management system.
 \vspace{0.5cm}\\
-\textbf{OLE} -- Oblivious linear evaluation
+\textbf{OLE} -- Oblivious linear evaluation.
 \vspace{0.5cm}\\
-\textbf{OT} -- Oblivious transfer
+\textbf{OT} -- Oblivious transfer.
 \vspace{0.5cm}\\
-\textbf{PDQ} -- Private database queries
+\textbf{PDQ} -- Private database queries.
 \vspace{0.5cm}\\
-\textbf{PET} -- Privacy-enhancing technologies
+\textbf{PET} -- Privacy-enhancing technologies.
 \vspace{0.5cm}\\
-\textbf{PHYLIP} -- Phylogeny inference package
+\textbf{PHYLIP} -- Phylogeny inference package.
 \vspace{0.5cm}\\
-\textbf{POVM} -- Positive operator-valued measure
+\textbf{POVM} -- Positive operator-valued measure.
 \vspace{0.5cm}\\
-\textbf{PRG} -- Pseudorandom generator
+\textbf{PRG} -- Pseudorandom generator.
 \vspace{0.5cm}\\
-\textbf{QBC} -- Quantum bit commitment
+\textbf{QBC} -- Quantum bit commitment.
 \vspace{0.5cm}\\
-\textbf{QKD} -- Quantum key distribution
+\textbf{QKD} -- Quantum key distribution.
 \vspace{0.5cm}\\
-\textbf{QOKD} -- Quantum oblivious key distribution
+\textbf{QOKD} -- Quantum oblivious key distribution.
 \vspace{0.5cm}\\
-\textbf{QOLE} -- Quantum oblivious linear evaluation
+\textbf{QOLE} -- Quantum oblivious linear evaluation.
 \vspace{0.5cm}\\
-\textbf{QOT} -- Quantum oblivious transfer
+\textbf{QOT} -- Quantum oblivious transfer.
 \vspace{0.5cm}\\
-\textbf{QRNG} -- Quantum oblivious transfer
+\textbf{QRNG} -- Quantum random number generator.
 \vspace{0.5cm}\\
-QRNG
-quantum-UC
-RAM
-RNG
-ROM
-RSA
-RWOLE
-SARS-CoV-2
-SHA
-SimpleOT
-SMC
-THA
-UC
-UPGMA
-VM
-VOLE
-WOLE
-WSE
+\textbf{quantum-UC} -- Quantum universal composability model.
+\vspace{0.5cm}\\
+\textbf{RNG} -- Random number generator.
+\vspace{0.5cm}\\
+\textbf{RSA} -- Rivest, Shamir, Adleman.
+\vspace{0.5cm}\\
+\textbf{RWOLE} -- Random weak oblivious linear evaluation.
+\vspace{0.5cm}\\
+\textbf{SARS-CoV-2} -- Severe acute respiratory syndrome coronavirus 2.
+\vspace{0.5cm}\\
+\textbf{SHA} -- Secure hash algorithm.
+\vspace{0.5cm}\\
+\textbf{SMC} -- Secure multiparty computation.
+\vspace{0.5cm}\\
+\textbf{THA} -- Trojan-horse attack.
+\vspace{0.5cm}\\
+\textbf{UC} -- Universal composability model.
+\vspace{0.5cm}\\
+\textbf{UPGMA} -- Unweighted pair group method with arithmetic mean.
+\vspace{0.5cm}\\
+\textbf{VM} -- Virtual machine.
+\vspace{0.5cm}\\
+\textbf{VOLE} -- Vector oblivious linear evaluation.
+\vspace{0.5cm}\\
+\textbf{WOLE} -- Weak oblivious linear evaluation.
+\vspace{0.5cm}\\
+\textbf{WSE} -- Weak string erasure.
+\vspace{0.5cm}\\
 
 
 
 
 
 
-\textbf{A} -- Alice
-\vspace{0.5cm}\\
-\textbf{B} -- Bob
-\vspace{0.5cm}\\
-\textbf{BCS} -- Bardeen-Cooper-Schrieffer
-\vspace{0.5cm}\\
-\textbf{BG} -- Boltzmann-Gibbs
-\vspace{0.5cm}\\
-\textbf{CS} -- Chiral symmetry
-\vspace{0.5cm}\\
-\textbf{DTQW} -- Discrete-time quantum walk 
-\vspace{0.5cm}\\
-\textbf{DQPT} -- Dynamical quantum phase transition 
-\vspace{0.5cm}\\
-\textbf{E} -- Eve
-\vspace{0.5cm}\\
-\textbf{EB} -- Entanglement based
-\vspace{0.5cm}\\
-\textbf{LE} -- Loschmidt Echo
-\vspace{0.5cm}\\
-\textbf{MDM} -- Massive Dirac model
-\vspace{0.5cm}\\
-\textbf{PHS} -- Particle-hole symmetry
-\vspace{0.5cm}\\
-\textbf{PT} -- Phase transition
-\vspace{0.5cm}\\
-\textbf{PM} -- Prepare and measure
-\vspace{0.5cm}\\
-\textbf{SSH} -- Su-Schrieffer-Heeger
-\vspace{0.5cm}\\
-\textbf{TI} -- Topological insulator
-\vspace{0.5cm}\\
-\textbf{TSC} -- Topological superconductor
-\vspace{0.5cm}\\
-\textbf{TRS} -- Time-reversal symmetry
-\vspace{0.5cm}\\
-\textbf{QKD} -- Quantum Key Distribution
-\vspace{0.5cm}\\
-\textbf{QW} -- Quantum walk
-\vspace{0.5cm}\\
+
+
