working on notation

--- a/List_of_Abbreviations.tex
+++ b/List_of_Abbreviations.tex
@@ -35,6 +35,8 @@
 \vspace{0.5cm}\\
 \textbf{CPU} -- Central processing unit.
 \vspace{0.5cm}\\
+\textbf{CRS} -- Common reference string.
+\vspace{0.5cm}\\
 \textbf{CSRNG} -- Cryptographically secure pseudorandom number generator.
 \vspace{0.5cm}\\
 \textbf{DI} -- Device independent.
@@ -66,6 +68,8 @@
 \textbf{LAN} -- Local area network.
 \vspace{0.5cm}\\
 \textbf{LD} -- LogDet.
+\vspace{0.5cm}\\
+\textbf{LWE} -- Learning with errors.
 \vspace{0.5cm}\\
 \textbf{M-LWE} -- Module learning with errors.
 \vspace{0.5cm}\\
